[package]
name = "hashme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { git = "https://github.com/DasStone/hashes" } # fork of the original repository for changed initial values
hashme_internal = { path = "hashme_internal" }
